(library
 (name pa_JSX)
 (public_name pa_JSX)
 (libraries camlp5)
 ;  (preprocess
 ;   (action
 ;    (run camlp5 %{read-lines:../config/camlp5-flags.cfg} %{input-file})))
 (preprocess
  (action
   (run %{workspace_root}/camlp5/pp5+dump.byte %{input-file}))))

(rule
 (targets pp5+dump.byte)
 (action
  (run
   mkcamlp5
   -package
   camlp5.pa_o,camlp5.pr_dump,camlp5.extend,camlp5.extfold,camlp5.quotations
   -o
   %{targets})))

(cram
 (deps pa_JSX.cma pp5+pa_JSX+o.exe))

(rule
 (targets pp5+pa_JSX+dump.exe)
 (deps pa_JSX.cmxa)
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_dump
   %{deps}
   -o
   %{targets})))

(rule
 (targets pp5+pa_JSX+o.exe)
 (deps pa_JSX.cmxa)
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.macro,camlp5.pr_o
   %{deps}
   -o
   %{targets})))
